--- a/css/vars.less
+++ b/css/vars.less
@@ -4,5 +4,8 @@
 @linked-color:#e24337;
 @selected-color: #ff7b6d;
 
-@header-height: 50px;
-@rz-header-height: 50px;
+
+@headerHeight : 50px;
+@controlsHeight: 60px;
+@header-height: @headerHeight;
+@rz-header-height: @headerHeight;
