--- a/class.twig
+++ b/class.twig
@@ -1,6 +1,6 @@
 {% extends "layout/layout.twig" %}
-{% from "macros.twig" import render_classes, breadcrumbs, namespace_link, class_link, property_link, method_link, hint_link %}
-{% block title %}{{ class.name }} | {{ parent() }}{% endblock %}
+{% from "macros.twig" import render_classes, breadcrumbs, namespace_link, class_link, property_link, method_link, hint_link, source_link, method_source_link, deprecated, deprecations, todo, todos %}
+{% block title %}{{ class|raw }} | {{ parent() }}{% endblock %}
 {% block body_class 'class' %}
 {% block page_id 'class:' ~ (class.name|replace({'\\': '_'})) %}
 
@@ -8,9 +8,9 @@
     {% if class.namespace %}
         <div class="namespace-breadcrumbs">
             <ol class="breadcrumb">
-                <li><span class="label label-default">{{ class.categoryName }}</span></li>
-                {{ breadcrumbs(class.namespace) }}
-                <li>{{ class.shortname }}</li>
+                <li><span class="label label-default">{{ class.categoryName|raw }}</span></li>
+                {{ breadcrumbs(class.namespace) -}}
+                <li>{{ class.shortname|raw }}</li>
             </ol>
         </div>
     {% endif %}
@@ -19,10 +19,15 @@
 {% block page_content %}
 
     <div class="page-header">
-        <h1>{{ class.name|split('\\')|last }}</h1>
+        <h1>
+            {{ class.name|split('\\')|last|raw }}
+            {{ deprecated(class) }}
+        </h1>
     </div>
 
     <p>{{ block('class_signature') }}</p>
+
+    {{ deprecations(class) }}
 
     {% if class.shortdesc or class.longdesc %}
         <div class="description">
@@ -32,6 +37,9 @@
             {% if class.longdesc -%}
                 <p>{{ class.longdesc|desc(class) }}</p>
             {%- endif %}
+            {% if project.config('insert_todos') == true %}
+                {{ todos(class) }}
+            {% endif %}
         </div>
     {% endif %}
 
@@ -67,8 +75,8 @@
 
 {% block class_signature -%}
     {% if not class.interface and class.abstract %}abstract {% endif %}
-    {{ class.categoryName }}
-    <strong>{{ class.shortname }}</strong>
+    {{ class.categoryName|raw }}
+    <strong>{{ class.shortname|raw }}</strong>
     {%- if class.parent %}
         extends {{ class_link(class.parent) }}
     {%- endif %}
@@ -79,6 +87,7 @@
             {%- if not loop.last %}, {% endif %}
         {%- endfor %}
     {%- endif %}
+    {{- source_link(project, class) }}
 {% endblock %}
 
 {% block method_signature -%}
@@ -88,12 +97,13 @@
     {% if method.protected %}protected{% endif %}
     {% if method.private %}private{% endif %}
     {{ hint_link(method.hint) }}
-    <strong>{{ method.name }}</strong>{{ block('method_parameters_signature') }}
+    <strong>{{ method.name|raw }}</strong>{{ block('method_parameters_signature') }}
 {%- endblock %}
 
 {% block method_parameters_signature -%}
     {%- from "macros.twig" import method_parameters_signature -%}
     {{ method_parameters_signature(method) }}
+    {{ deprecated(method) }}
 {%- endblock %}
 
 {% block parameters %}
@@ -101,7 +111,7 @@
         {% for parameter in method.parameters %}
             <tr>
                 <td>{% if parameter.hint %}{{ hint_link(parameter.hint) }}{% endif %}</td>
-                <td>${{ parameter.name }}</td>
+                <td>${{ parameter.name|raw }}</td>
                 <td>{{ parameter.shortdesc|desc(class) }}</td>
             </tr>
         {% endfor %}
@@ -132,8 +142,8 @@
     <table class="table table-condensed">
         {% for tag in method.tags('see') %}
             <tr>
-                <td>{{ tag[0] }}</td>
-                <td>{{ tag[1:]|join(' ') }}</td>
+                <td>{{ tag[0]|raw }}</td>
+                <td>{{ tag[1:]|join(' ')|raw }}</td>
             </tr>
         {% endfor %}
     </table>
@@ -143,7 +153,7 @@
     <table class="table table-condensed">
         {% for constant in constants %}
             <tr>
-                <td>{{ constant.name }}</td>
+                <td>{{ constant.name|raw }}</td>
                 <td class="last">
                     <p><em>{{ constant.shortdesc|desc(class) }}</em></p>
                     <p>{{ constant.longdesc|desc(class) }}</p>
@@ -157,16 +167,16 @@
     <table class="table table-condensed">
         {% for property in properties %}
             <tr>
-                <td class="type" id="property_{{ property.name }}">
+                <td class="type" id="property_{{ property.name|raw }}">
                     {% if property.static %}static{% endif %}
                     {% if property.protected %}protected{% endif %}
                     {% if property.private %}private{% endif %}
                     {{ hint_link(property.hint) }}
                 </td>
-                <td>${{ property.name }}</td>
+                <td>${{ property.name|raw }}</td>
                 <td class="last">{{ property.shortdesc|desc(class) }}</td>
                 <td>
-                    {%- if property.class is not sameas(class) -%}
+                    {%- if property.class is not same as(class) -%}
                         <small>from&nbsp;{{ property_link(property, false, true) }}</small>
                     {%- endif -%}
                 </td>
@@ -176,22 +186,22 @@
 {% endblock %}
 
 {% block methods %}
-    <div id="methods-summary" class="container-fluid underlined">
+    <div class="container-fluid underlined">
         {% for method in methods %}
             <div class="row">
-                <div class="col-md-2 type method-hint">
+                <div class="col-md-2 type">
                     {% if method.static %}static&nbsp;{% endif %}{{ hint_link(method.hint) }}
                 </div>
-                <div class="col-md-6 type">
-                    <a class="signature" href="#method_{{ method.name }}">{{ method.name }}</a>{{ block('method_parameters_signature') }}
+                <div class="col-md-8 type">
+                    <a href="#method_{{ method.name|raw }}">{{ method.name|raw }}</a>{{ block('method_parameters_signature') }}
                     {% if not method.shortdesc %}
                         <p class="no-description">No description</p>
                     {% else %}
-                        <p class="method-description">{{ method.shortdesc|desc(class) }}</p>
+                        <p>{{ method.shortdesc|desc(class) }}</p>
                     {%- endif %}
                 </div>
-                <div class="col-md-2 method-inheritance">
-                    {%- if method.class is not sameas(class) -%}
+                <div class="col-md-2">
+                    {%- if method.class is not same as(class) -%}
                         <small>from&nbsp;{{ method_link(method, false, true) }}</small>
                     {%- endif -%}
                 </div>
@@ -211,11 +221,13 @@
 {% endblock %}
 
 {% block method %}
-    <h3 id="method_{{ method.name }}">
-        <div class="location">{% if method.class is not sameas(class) %}in {{ method_link(method, false, true) }} {% endif %}at line {{ method.line }}</div>
+    <h3 id="method_{{ method.name|raw }}">
+        <div class="location">{% if method.class is not same as(class) %}in {{ method_link(method, false, true) }} {% endif %}at {{ method_source_link(method) }}</div>
         <code>{{ block('method_signature') }}</code>
     </h3>
     <div class="details">
+        {{ deprecations(method) }}
+
         {% if method.shortdesc or method.longdesc %}
             <div class="method-description">
                 {% if not method.shortdesc and not method.longdesc %}
@@ -228,6 +240,9 @@
                     <p>{{ method.longdesc|desc(class) }}</p>
                     {%- endif %}
                 {%- endif %}
+                {% if project.config('insert_todos') == true %}
+                    {{ todos(method) }}
+                {% endif %}
             </div>
         {% endif %}
         <div class="tags">
