--- a/macros.twig
+++ b/macros.twig
@@ -1,40 +1,56 @@
 {% macro namespace_link(namespace) -%}
-    <a href="{{ namespace_path(namespace) }}">{{ namespace }}</a>
+    <a href="{{ namespace_path(namespace) }}">{{ namespace|raw }}</a>
 {%- endmacro %}
 
 {% macro class_link(class, absolute) -%}
     {%- if class.projectclass -%}
         <a href="{{ class_path(class) }}">
     {%- elseif class.phpclass -%}
-        <a href="http://php.net/{{ class }}">
+        <a target="_blank" href="http://php.net/{{ class|raw }}">
     {%- endif %}
-    {{- _self.abbr_class(class, absolute|default(false)) }}
+    {{- abbr_class(class, absolute|default(false)) }}
     {%- if class.projectclass or class.phpclass %}</a>{% endif %}
 {%- endmacro %}
 
 {% macro method_link(method, absolute, classonly) -%}
     <a href="{{ method_path(method) }}">
-        {{- _self.abbr_class(method.class) }}{% if not classonly|default(false) %}::{{ method.name }}{% endif -%}
+        {{- abbr_class(method.class) }}{% if not classonly|default(false) %}::{{ method.name|raw }}{% endif -%}
     </a>
 {%- endmacro %}
 
 {% macro property_link(property, absolute, classonly) -%}
     <a href="{{ property_path(property) }}">
-        {{- _self.abbr_class(property.class) }}{% if not classonly|default(true) %}#{{ property.name }}{% endif -%}
+        {{- abbr_class(property.class) }}{% if not classonly|default(true) %}#{{ property.name|raw }}{% endif -%}
     </a>
 {%- endmacro %}
 
 {% macro hint_link(hints) -%}
-    {% if hints %}
+    {%- from _self import class_link %}
+
+    {%- if hints %}
         {%- for hint in hints %}
             {%- if hint.class %}
-                {{- _self.class_link(hint.name) }}
+                {{- class_link(hint.name) }}
             {%- elseif hint.name %}
                 {{- abbr_class(hint.name) }}
             {%- endif %}
             {%- if hint.array %}[]{% endif %}
             {%- if not loop.last %}|{% endif %}
         {%- endfor %}
+    {%- endif %}
+{%- endmacro %}
+
+{% macro source_link(project, class) -%}
+    {% if class.sourcepath %}
+        (<a href="{{ class.sourcepath }}">View source</a>)
+    {%- endif %}
+{%- endmacro %}
+
+{% macro method_source_link(method) -%}
+    {% if method.sourcepath %}
+        <a href="{{ method.sourcepath }}">line {{ method.line|raw }}</a>
+    {%- else %}
+        line {{ method.line|raw }}
     {%- endif %}
 {%- endmacro %}
 
@@ -47,7 +63,7 @@
     (
         {%- for parameter in method.parameters %}
             {%- if parameter.hashint %}{{ hint_link(parameter.hint) }} {% endif -%}
-            ${{ parameter.name }}
+            ${{ parameter.name|raw }}
             {%- if parameter.default %} = {{ parameter.default }}{% endif %}
             {%- if not loop.last %}, {% endif %}
         {%- endfor -%}
@@ -55,15 +71,18 @@
 {%- endmacro %}
 
 {% macro render_classes(classes) -%}
+    {% from _self import class_link, deprecated %}
+
     <div class="container-fluid underlined">
         {% for class in classes %}
             <div class="row">
                 <div class="col-md-6">
                     {% if class.isInterface %}
-                        <em>{{ _self.class_link(class, true) }}</em>
+                        <em>{{ class_link(class, true) }}</em>
                     {% else %}
-                        {{ _self.class_link(class, true) }}
+                        {{ class_link(class, true) }}
                     {% endif %}
+                    {{ deprecated(class) }}
                 </div>
                 <div class="col-md-6">
                     {{ class.shortdesc|desc(class) }}
@@ -76,11 +95,51 @@
 {% macro breadcrumbs(namespace) %}
     {% set current_ns = '' %}
     {% for ns in namespace|split('\\') %}
-        {% if current_ns %}
+        {%- if current_ns -%}
             {% set current_ns = current_ns ~ '\\' ~ ns %}
-        {% else %}
+        {%- else -%}
             {% set current_ns = ns %}
+        {%- endif -%}
+        <li><a href="{{ namespace_path(current_ns) }}">{{ ns|raw }}</a></li><li class="backslash">\</li>
+    {%- endfor %}
+{% endmacro %}
+
+{% macro deprecated(reflection) %}
+    {% if reflection.deprecated %}<small><sup><span class="label label-danger">deprecated</span></sup></small>{% endif %}
+{% endmacro %}
+
+{% macro deprecations(reflection) %}
+    {% from _self import deprecated %}
+
+    {% if reflection.deprecated %}
+        <p>
+            {{ deprecated(reflection )}}
+            {% for tag in reflection.deprecated %}
+                <tr>
+                    <td>{{ tag[0]|raw }}</td>
+                    <td>{{ tag[1:]|join(' ')|raw }}</td>
+                </tr>
+            {% endfor %}
+        </p>
+    {% endif %}
+{% endmacro %}
+
+{% macro todo(reflection) %}
+        {% if reflection.todo %}<small><sup><span class="label label-info">todo</span></sup></small>{% endif %}
+{% endmacro %}
+
+{% macro todos(reflection) %}
+        {% from _self import todo %}
+
+        {% if reflection.todo %}
+            <p>
+                {{ todo(reflection )}}
+                {% for tag in reflection.todo %}
+                    <tr>
+                        <td>{{ tag[0]|raw }}</td>
+                        <td>{{ tag[1:]|join(' ')|raw }}</td>
+                        </tr>
+                {% endfor %}
+            </p>
         {% endif %}
-        <li><a href="{{ namespace_path(current_ns) }}">{{ ns }}</a></li>
-    {% endfor %}
 {% endmacro %}
