--- a/search.twig
+++ b/search.twig
@@ -11,7 +11,7 @@
 
     <p>This page allows you to search through the API documentation for
     specific terms. Enter your search words into the box below and click
-    "submit". The search will be performed on namespaces, clases, interfaces,
+    "submit". The search will be performed on namespaces, classes, interfaces,
     traits, functions, and methods.</p>
 
     <form class="form-inline" role="form" action="{{ path('search.html') }}" method="GET">
@@ -45,10 +45,6 @@
 
             $('#search').val(term);
             var container = $('.search-results');
-
-            // create the search index
-            {{ block('search_index') }}
-
             var results = Sami.search(term);
             var len = results.length;
 
